--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,112 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-border-animation::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 50%;
+    top: 50%;
+    background-image: conic-gradient(from var(--angle), transparent 75%, #ddd);
+    transform: translate(-50%, -50%);
+    border-radius: 24px;
+    padding: 21px 48px;
+    z-index: -1;
+    animation: spin 3s linear infinite;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.custom-border-animation::after {
+    filter: blur(30px);
+    opacity: 0.5;
+    z-index: -1;
 }
 
-.card {
-  padding: 2em;
+@keyframes spin {
+    from {
+        --angle: 0deg;
+    }
+
+    to {
+        --angle: 360deg
+    }
 }
 
-.read-the-docs {
-  color: #888;
+.custom-button-backdrop {
+    position: relative;
+    z-index: 0;
+    overflow: visible;
+}
+
+.custom-button-backdrop::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1.05, 1.2);
+    background-color: #000;
+    border-radius: 32px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.2;
+    border: 1px solid #fff;
+}
+
+.card::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    background: #0B0B0F;
+    border-radius: 0 0 20px 0;
+}
+
+
+
+.comprehensiveDoc::after {
+    content: '';
+    position: absolute;
+    left: -16px;
+    top: 10px;
+    height: calc(100% - 10px);
+    width: 1px;
+    background-color: #627280;
+}
+
+.comprehensiveDoc::before {
+    content: '';
+    position: absolute;
+    left: -23px;
+    top: 0px;
+    width: 16px;
+    height: 16px;
+    background: url('./assets/GlitterLine.svg') no-repeat center center;
+    background-size: contain;
+}
+.titleLightning{
+    background: url('./assets/title-lighting.svg') no-repeat;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: -25px;
+    left: 190px;
+    z-index: 10;
+}
+
+.testimonials .swiper-slide:not(.swiper-slide-active){
+    scale: 0.9 !important;
+    background: transparent !important;
+}
+.textGlow {
+  color: #fff;
+  text-shadow:
+    0 0 2px #fff,
+    0 0 4px #fff,
+    0 0 6px #fff;
 }
